--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -91,6 +91,12 @@
             <setting name="ApplicationVersion" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LogWindowPlacement" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LogWindowOpen" serializeAs="String">
+                <value>False</value>
+            </setting>
         </VidCoder.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
