Customizable columns and remembering column sizes on queue. Also adding some links to the Help menu.

--- a/VidCoder/Properties/Settings.settings
+++ b/VidCoder/Properties/Settings.settings
@@ -92,5 +92,11 @@
     <Setting Name="LogWindowOpen" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="QueueColumns" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Source:200|Title:35|Chapters:60|Destination:200</Value>
+    </Setting>
+    <Setting Name="QueueLastColumnWidth" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">75</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
