--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -97,6 +97,12 @@
             <setting name="LogWindowOpen" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="QueueColumns" serializeAs="String">
+                <value>Source:200|Title:35|Chapters:60|Destination:200</value>
+            </setting>
+            <setting name="QueueLastColumnWidth" serializeAs="String">
+                <value>75</value>
+            </setting>
         </VidCoder.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
