--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -103,6 +103,12 @@
             <setting name="QueueLastColumnWidth" serializeAs="String">
                 <value>75</value>
             </setting>
+            <setting name="QueueTitlesStartTime" serializeAs="String">
+                <value>40</value>
+            </setting>
+            <setting name="QueueTitlesEndTime" serializeAs="String">
+                <value>45</value>
+            </setting>
         </VidCoder.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
