--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -109,6 +109,12 @@
             <setting name="QueueTitlesEndTime" serializeAs="String">
                 <value>45</value>
             </setting>
+            <setting name="QueueTitlesUseRange" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="QueueTitlesDialogPlacement" serializeAs="String">
+                <value />
+            </setting>
         </VidCoder.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
