--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -194,11 +194,12 @@
     <Compile Include="Converters\DoubleDisplayConverter.cs" />
     <Compile Include="Converters\PercentDisplayConverter.cs" />
     <Compile Include="EnumStringConverter.cs" />
-    <Compile Include="IListItemConverter.cs" />
+    <Compile Include="Utilities\ListSynchronizer\IListItemConverter.cs" />
     <Compile Include="Model\Logger.cs" />
-    <Compile Include="MultiSelectorBehaviors.cs" />
+    <Compile Include="Utilities\ListSynchronizer\MultiSelectorBehaviors.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="TwoListSynchronizer.cs" />
+    <Compile Include="Utilities\ListSynchronizer\TwoListSynchronizer.cs" />
+    <Compile Include="Utilities\SystemSleepManagement.cs" />
     <Compile Include="ViewModel\AboutDialogViewModel.cs" />
     <Compile Include="ViewModel\DataModels\AdvancedChoices.cs" />
     <Compile Include="ViewModel\DataModels\ColumnViewModel.cs" />
@@ -222,7 +223,7 @@
     <Compile Include="View\ScanMultipleDialog.xaml.cs">
       <DependentUpon>ScanMultipleDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WpfSystemIcons.cs" />
+    <Compile Include="Utilities\WpfSystemIcons.cs" />
     <Compile Include="View\ExceptionDialog.xaml.cs">
       <DependentUpon>ExceptionDialog.xaml</DependentUpon>
     </Compile>
@@ -251,7 +252,7 @@
     <Compile Include="Converters\FramerateDisplayConverter.cs" />
     <Compile Include="Converters\InverseBoolConverter.cs" />
     <Compile Include="Converters\VisibilityConverter.cs" />
-    <Compile Include="DisplayConversions.cs" />
+    <Compile Include="Utilities\DisplayConversions.cs" />
     <Compile Include="DragDrop\DragDropHelper.cs" />
     <Compile Include="DragDrop\DraggedAdorner.cs" />
     <Compile Include="DragDrop\IDragItem.cs" />
@@ -276,7 +277,7 @@
     <Compile Include="Services\UpdateService.cs" />
     <Compile Include="Services\WindowLauncher.cs" />
     <Compile Include="Services\WindowManager.cs" />
-    <Compile Include="Utilities.cs" />
+    <Compile Include="Utilities\Utilities.cs" />
     <Compile Include="ViewModel\ChapterMarkersDialogViewModel.cs" />
     <Compile Include="ViewModel\CharCode.cs" />
     <Compile Include="ViewModel\ChoosePresetNameViewModel.cs" />
