--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -115,6 +115,9 @@
             <setting name="QueueTitlesDialogPlacement" serializeAs="String">
                 <value />
             </setting>
+            <setting name="CompletedColumnWidths" serializeAs="String">
+                <value />
+            </setting>
         </VidCoder.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
