--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -118,6 +118,9 @@
             <setting name="CompletedColumnWidths" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LogVerbosity" serializeAs="String">
+                <value>1</value>
+            </setting>
         </VidCoder.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
