--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -195,6 +195,7 @@
     </Compile>
     <Compile Include="Converters\DoubleDisplayConverter.cs" />
     <Compile Include="Converters\PercentDisplayConverter.cs" />
+    <Compile Include="Converters\SampleRateDisplayConverter.cs" />
     <Compile Include="EnumStringConverter.cs" />
     <Compile Include="Model\EncodeResult.cs" />
     <Compile Include="Utilities\ListSynchronizer\IListItemConverter.cs" />
