--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -402,6 +402,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Resource Include="Icons\play_clip.png" />
     <Resource Include="Icons\delete.png" />
     <Resource Include="Icons\play_small.png" />
     <Resource Include="Icons\failed.png" />
