--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -1,10 +1,31 @@
 <?xml version="1.0"?>
 <configuration>
 	<configSections>
+		<section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration"/>
 		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
 			<section name="VidCoder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
 		</sectionGroup>
 	</configSections>
+
+	<unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
+		<namespace name="VidCoder.Services" />
+		<assembly name="VidCoder" />
+
+		<container>
+			<register type="IDriveService" mapTo="DriveService" />
+			<register type="IUpdater" mapTo="Updater" />
+			<register type="IMessageBoxService" mapTo="MessageBoxService">
+				<lifetime type="singleton" />
+			</register>
+			<register type="ILogger" mapTo="Logger">
+				<lifetime type="singleton" />
+			</register>
+			<register type="IFileService" mapTo="FileService">
+				<lifetime type="singleton" />
+			</register>
+		</container>
+	</unity>
+
 	<userSettings>
 		<VidCoder.Properties.Settings>
 			<setting name="EncodingDialogLastTab" serializeAs="String">
