--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -23,6 +23,7 @@
 			<register type="IFileService" mapTo="FileService">
 				<lifetime type="singleton" />
 			</register>
+			<register type="IPresetImport" mapTo="PresetImport" />
 		</container>
 	</unity>
 
