Update to HandBrake svn 3594, updated HandbrakeInterop p-invokes. Added blu-ray drive detection to support HB blu-ray. Some refactoring on the drive code. Made Preview window text simpler for 1/1 PAR.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -408,6 +408,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Resource Include="Icons\bludisc.png" />
     <Resource Include="Icons\edit_2.png" />
     <Resource Include="Icons\play_clip.png" />
     <Resource Include="Icons\delete.png" />
