--- a/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
+++ b/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
@@ -60,6 +60,7 @@
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -79,7 +80,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converters.cs" />
-    <Compile Include="DisplayStringAttribute.cs" />
     <Compile Include="EncodeCompletedEventArgs.cs" />
     <Compile Include="EncodeProgressEventArgs.cs" />
     <Compile Include="HandBrakeInstance.cs" />
