Check empty and duplicates when adding auto pause processes to config. Changing IProcesses to singleton.

--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -24,7 +24,9 @@
 				<lifetime type="singleton" />
 			</register>
 			<register type="IPresetImport" mapTo="PresetImport" />
-			<register type="IProcesses" mapTo="Processes" />
+			<register type="IProcesses" mapTo="Processes">
+				<lifetime type="singleton" />
+			</register>
 			<register type="IProcessAutoPause" mapTo="ProcessAutoPause" />
 		</container>
 	</unity>
