Changed subtitles to display their source rather than just text vs bitmap.

--- a/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
+++ b/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
@@ -114,6 +114,7 @@
     <Compile Include="SourceData\AudioTrack.cs" />
     <Compile Include="SourceData\Chapter.cs" />
     <Compile Include="SourceData\Subtitle.cs" />
+    <Compile Include="SourceData\SubtitleSource.cs" />
     <Compile Include="SourceData\SubtitleType.cs" />
     <Compile Include="SourceData\Title.cs" />
   </ItemGroup>
