Updating to HandBrake svn 3654, which fixes a crash when scanning blu-rays. Enabled blu-ray drive detection as well.
Also updated preview window to cache the preview images.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Converters\SampleRateDisplayConverter.cs" />
     <Compile Include="EnumStringConverter.cs" />
     <Compile Include="Model\EncodeResult.cs" />
+    <Compile Include="Model\PreviewImageJob.cs" />
     <Compile Include="Services\Interfaces\ILogger.cs" />
     <Compile Include="Services\Interfaces\IPresetImport.cs" />
     <Compile Include="Services\Interfaces\IProcesses.cs" />
