--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -150,6 +150,9 @@
    <setting name="AddAutoPauseProcessDialogPlacement" serializeAs="String">
     <value />
    </setting>
+   <setting name="PreviewCount" serializeAs="String">
+    <value>10</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
