Updating preview image file cache to not block the UI thread, making scrolling through HD previews and actions that update the preview more responsive.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -207,6 +207,7 @@
     <Compile Include="EnumStringConverter.cs" />
     <Compile Include="Model\EncodeResult.cs" />
     <Compile Include="Model\PreviewImageJob.cs" />
+    <Compile Include="Model\SaveImageJob.cs" />
     <Compile Include="Services\Interfaces\ILogger.cs" />
     <Compile Include="Services\Interfaces\IPresetImport.cs" />
     <Compile Include="Services\Interfaces\IProcesses.cs" />
