Updated to display some input information on the Video tab: input type, video codec and framerate.

--- a/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
+++ b/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
@@ -113,6 +113,7 @@
     <Compile Include="ScanProgressEventArgs.cs" />
     <Compile Include="SourceData\AudioTrack.cs" />
     <Compile Include="SourceData\Chapter.cs" />
+    <Compile Include="SourceData\InputType.cs" />
     <Compile Include="SourceData\Subtitle.cs" />
     <Compile Include="SourceData\SubtitleSource.cs" />
     <Compile Include="SourceData\SubtitleType.cs" />
