--- a/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
+++ b/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
@@ -158,6 +158,7 @@
     <Compile Include="NativeList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScanProgressEventArgs.cs" />
+    <Compile Include="SourceData\AudioCodec.cs" />
     <Compile Include="SourceData\AudioTrack.cs" />
     <Compile Include="SourceData\Chapter.cs" />
     <Compile Include="SourceData\InputType.cs" />
