--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -440,9 +440,6 @@
     <Resource Include="Icons\tools.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Icons\play_60.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Icons\downarrow_shadow.png" />
   </ItemGroup>
   <ItemGroup>
@@ -456,6 +453,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Resource Include="Icons\encode_160.png" />
     <Resource Include="Icons\bludisc.png" />
     <Resource Include="Icons\edit_2.png" />
     <Resource Include="Icons\play_clip.png" />
