Added point to point (seconds or frames) to encoding options.

--- a/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
+++ b/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Model\SourceType.cs" />
     <Compile Include="Model\SrtSubtitle.cs" />
     <Compile Include="Model\Subtitles.cs" />
+    <Compile Include="Model\VideoRangeType.cs" />
     <Compile Include="NativeList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScanProgressEventArgs.cs" />
