Added option to override the title number when queuing multiple titles. Added an option on the {title} token to specify leading zeroes.

--- a/VidCoder/Properties/Settings.settings
+++ b/VidCoder/Properties/Settings.settings
@@ -125,5 +125,11 @@
     <Setting Name="PreviewCount" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="QueueTitlesUseTitleOverride" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="QueueTitlesTitleOverride" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
